# analysisThesis

./: .Rprofile  .gitignore  Manifest.toml  bar_per_channel.py  bert_plots.py  channelVideos.jl  descriptive_plots.py  eda.py  growthrate.py  histWordCount.jl  justfile  main.py  pyproject.toml  regressions.ipynb  summary_statistics.py  table_builder.py  table_summary_growth.py  table_summary_stats.py  table_var.py  table_var_typst.py  timeseries.py  topics_plot.py  topics_regression.py  topics_tables.py  total_videos_per_creator.py  violinClassificationLLM.jl
.virtual_documents/: Untitled.ipynb
histogram/: videos.jl
julia/: Project.toml  histVideoLength.jl  regressionTables.jl  scatterplots.jl
models/: ols.R
notebooks/: fist_analysis.ipynb  polars.ipynb  regressions.ipynb  sentiment.ipynb  timeseries.ipynb
plots/: regression_table.tex
scatterplots/: test.jl  view_comments.jl  view_pop.jl
tables/: creator_videos.typ  growth_concentration.typ  growth_quartile.typ  growth_statistics.typ  list_variables.typ  regression_table.tex  regression_table.typ  summary_statistics.typ  time_summary.typ  topic_distribution.typ
timeseries/: first_look.py
